<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_label">Austin Feeds Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="happening_now">Happening Now</string>
    <string name="near_you">Near You</string>
    <string name="all_events">All Events</string>
    <string name="add_event">Add Event</string>
    <string name="duration_label">Duration</string>
    <string name="location_label">Location</string>
    <string name="cuisine_label">Cuisine</string>
    <string name="event_name_hint">Event Name?</string>
    <string name="event_where_hint">Where?</string>
    <string name="event_start_time_hint">Start Time?</string>
    <string name="event_end_time_hint">End Time?</string>
    <string name="event_date_hint">Date?</string>
    <string name="event_food_hint">Food?</string>
    <string name="add_event_btn_text">Add Event</string>
    <string name="desc">Icon</string>
    <string name="sort_string">Sort By</string>
    <string name="sort_start_time">Starting time</string>
    <string name="sort_end_time">Ending time</string>
    <string name="sort_distance">Distance</string>
    <string name="sort_location">Location</string>
    <string name="sort_type">Type of food</string>
    <string name="develop">Developed by: </string>
    <string name="james">James Sweetman</string>
    <string name="daniel">Daniel Haas</string>
    <string name="andre">Andre Peng</string>
    <string name="toggle">Toggle View</string>

    <string-array name="navigation_items_array">
        <item>Events List</item>
        <item>Events Map</item>
        <item>Food Filter</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="save_event">Save Event</string>
    <string name="description">Description</string>
    <string name="name">Title</string>
    <string name="date">Date</string>
    <string name="host">Host</string>
    <string name="rsvp_link">RSVP Link</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="search_hint">Search Events</string>
    <string name="menu_filter">Filter</string>
    <string name="nav_all_events">All</string>
    <string name="nav_todays_events">Today</string>
    <string name="nav_this_weeks_events">This Week</string>
    <string name="no_events">no yummies returned</string>

</resources>
