<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#BF5700">
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#FFFFFF"/>
    
    <EditText 
        android:id="@+id/add_event_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_margin="10dp"
        />
    <EditText 
        android:id="@+id/add_event_where"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_where_hint"
                android:maxLines="1"
        android:maxLength="10"
        android:layout_margin="10dp"
        />
     <Button
		android:id="@+id/add_event_date"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/event_date_hint"
		android:layout_margin="10dp"
		/>
    <Button
		android:id="@+id/add_event_start_time"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/event_start_time_hint"
		android:layout_margin="10dp"
		/>
     <Button
		android:id="@+id/add_event_end_time"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/event_end_time_hint"
		android:layout_margin="10dp"
		/>
    <EditText 
        android:id="@+id/add_event_food"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_food_hint"
        android:layout_margin="10dp"
        />
    
    <Button 
        android:id="@+id/add_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_btn_text"
        android:layout_gravity="center"
        android:background="#FFFFFF"/>
    
    
</LinearLayout>